@@ -211,6 +211,7 @@ CompanyEditLogin=true
 ShowCompanyContact=true
 ShowCompanyStatus=true
 DefaultSection=1
+ShowAllConsultations=disabled
 
 
 [eZErrorMain]
